kubernetes-cka/_pods/k8s-debugpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug
    image: nicolaka/netshoot
    command:
    - sleep
    - '3600'
  restartPolicy: Never
