kubernetes-cka/_pods/k8s-init-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod
spec:
  containers:
  - name: app
    image: nginx:1.21
