kubernetes-cka/_pods/k8s-pod-sidecar.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - name: web
    image: nginx:1.21
    ports:
    - containerPort: 80
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html

  - name: content-generator
    image: alpine:3.14
    command: [ '/bin/sh', '-c' ]
    args:
    - while true; do echo "<h1>The current date is $(date)</h1>" > /data/index.html; sleep 10; done
    volumeMounts:
    - name: shared-data
      mountPath: /data

  volumes:
  - name: shared-data
    emptyDir: {}
