kubernetes-cka/_pods/k8s-networkpolicy-out.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netops-inbound
  namespace: netpolicy
spec:
  podSelector:
    matchLabels:
      purpose: ops_servers
    policyTypes:
    - Ingress
    Ingress:
    - from:
      - ipBlock:
          cidr: 172.17.249.0/24
          except: 172.17.1.0/24
      - podSelector:
          matchLabels:
            purpose: ops_servers
      ports:
      - protocol: TCP
        port: 3306
